Updated Sveltekit Meta Tags

--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,21 @@
 	<meta name="viewport" content="width=device-width" />
 	<title>SvelteKit Auth</title>
 	<link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+
+	<meta property="og:title" content=">SvelteKit Auth" />
+	<meta property="og:description" content="SvelteKit Auth Template using Lucia-auth, Drizzle ORM, Supabase" />
+	<meta property="og:image" content="https://i.pinimg.com/750x/77/01/dc/7701dc0b5fc38a079cab93e06e140652.jpg" />
+	<meta name="keywords"
+		content="sveltekit,lucia,svelte,javascript,js,framework,auth,signin,signup,register,coding,web,development,sveltejs,supabasejs,lucia-auth,drizzle,drizzleorm,orm,lucide,sveltecoding,easy,authentication">
+	<meta name="robots" content="index, follow">
+	<meta name="language" content="English">
+
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:site" content="@Sikandar_Bhide" />
+	<meta name="twitter:title" content="SvelteKit Auth" />
+	<meta name="twitter:description" content="SvelteKit Auth Template using Lucia-auth, Drizzle ORM, Supabase" />
+	<meta name="twitter:image" content="https://i.pinimg.com/750x/77/01/dc/7701dc0b5fc38a079cab93e06e140652.jpg" />
+
 	%sveltekit.head%
 </head>
 
