--- a/src/app.html
+++ b/src/app.html
@@ -8,7 +8,8 @@
 	<title>SvelteKit Auth</title>
 	<link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 
-	<meta property="og:title" content=">SvelteKit Auth" />
+	<meta property="og:title" content="SvelteKit Auth" />
+	<meta property="og:url" content="https://sveltekit-lucia.vercel.app" />
 	<meta property="og:description" content="SvelteKit Auth Template using Lucia-auth, Drizzle ORM, Supabase" />
 	<meta property="og:image" content="https://i.pinimg.com/750x/77/01/dc/7701dc0b5fc38a079cab93e06e140652.jpg" />
 	<meta name="keywords"
